common/vault/overlays/k8s-poc/patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: vault
spec:
  template:
    spec:
      containers:
        - name: vault
